# suxt

./: .travis.yml  Makefile.am  README.md  configure.ac
src/: Makefile.am  nifty.h  xmlsplit.c  xsltmultiproc.c  xsltmultiproc.yuck
test/: Makefile.am  ex_fpr.xml  ex_fpr.xsl  mproc_01.clit  mproc_02.clit  split_01.clit  split_02.clit
